# jax_reimplementation

./: README.md  pyproject.toml
logistic_regression/: and.ipynb
multi_layer_perceptron/: mnist.ipynb  xor.ipynb
softmax_regression/: mnist.ipynb
