[project]
name = "jax-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jax-metal>=0.1.1",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
]
